--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <title>Mornar Store</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="font-outfit"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
